tests/correct/correto06.lua

a = {
    b = 2,
    c = 3,
    d = 4,
    e = 5,
}

for i, j in pairs(a) do
    print(i, j)
end