tests/error/erro03.lua
a = {}

b = {}

b.d = 1, a.e() -- Erro
